Design Project Update
Gardeners' Hub

--- a/main.css
+++ b/main.css
@@ -81,11 +81,11 @@
         width: 88% !important;
     }
     hr {
-        width: 75% !important;
+        width: 80% !important;
         margin-top: 22% !important;
         margin-bottom: 22% !important;
-        background-color: black!important;
-        opacity: 0.3;
+        background-color: grey!important;
+        opacity: 0.5;
     }
 }
 
@@ -134,14 +134,13 @@ svg {
 }
 
 svg:hover {
+    z-index: 2;
     padding: 20 6px;
     transform: scale(1.4);
-    background-color:white;
-
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
     border-radius: 9px;
-    transition: all 0.3s 
-
+    transition: all 0.3s; 
+    box-shadow: 0 14px 28px rgba(230, 230, 230, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 hr {
@@ -227,7 +226,7 @@ br {
 
 .text-body-title {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     margin-top: 0px;
 }
 
@@ -370,8 +369,8 @@ button {
     flex-direction: column;
     position: relative;
     margin: 0px/* top&bottom*/
-    200px/* left&right*/
-    ;
+    200px/* left&right*/;
+
 }
 
 .image {
@@ -458,8 +457,44 @@ button {
 }
 
 .vertical-line {
-    border-left: 5px solid gray;
+    border-left: 1px solid gray;
     height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 30;
+}
+
+.vertical-line1 {
+    border-left: 1px solid gray;
+    height: 48px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 30;
+}
+
+.vertical-line2 {
+    border-left: 1px solid gray;
+    height: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 30;
+}
+
+.vertical-line3 {
+    border-left: 1px solid gray;
+    height: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 30;
+}
+
+.vertical-line4 {
+    border-left: 1px solid gray;
+    height: 92px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 0px;
@@ -518,7 +553,10 @@ button {
     align-items: center;
     margin-bottom: 0px;
 }
+.container-bleed {
 
+z-index: 2;
+}
 .container-body-project {
     display: flex;
     align-items: left;
@@ -549,6 +587,7 @@ button {
     justify-content: space-between;
     width: 100%;
 }
+
 .container-body-project-horizontaldiagram-text {
     display: flex;
     align-items: center;
@@ -556,27 +595,29 @@ button {
     justify-content: space-around;
     width: 110%;
 }
+
 .container-body-project-item {
     display: flex;
-    align-items: center;
     width: 200px;
     height: 200px;
-
     flex-direction: column;
+    justify-content: space-evenly;
 }
+
 .container-body-project-thesisphotos {
     display: flex;
     align-items: center;
     width: auto;
     height: 50px;
-
     flex-direction: column;
 }
+
 .container-body-project-itemtext {
     display: flex;
     align-items: center;
     font-weight: lighter;
     font-size: 12px;
+    justify-content: space-evenly;
 }
 
 .text-body-subtitle {
@@ -607,7 +648,7 @@ button {
     margin: 5px/* top&bottom*/
     28%;
     font-weight: 100;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .text-project-numbers {
@@ -629,8 +670,8 @@ button {
 }
 
 .text-time {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 8px;
+    margin-bottom: 15px;
     margin-left: 0px;
     font-weight: 100;
     font-size: 10px;
