--- a/main.css
+++ b/main.css
@@ -23,11 +23,11 @@
         align-items: center !important;
     }
     .text-body-description-bold {
-        font-size: 7px !important;
+        font-size: 6px !important;
         line-height: 10px !important;
     }
     .text-body-description {
-        font-size: 7px !important;
+        font-size: 6px !important;
         line-height: 10px !important;
     }
     /*----about----- */
@@ -62,6 +62,7 @@
     .container-body-project-img {
         width: 90% !important;
     }
+
     .container-body-project-itemtext {
         font-size: 8px !important;
     }
@@ -176,12 +177,12 @@ svg:hover {
 }
 
 hr {
-    width: 45%;
+    width: 600px;
     height: 1px;
     border-width: 0;
     background-color: black;
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 10%;
+    margin-bottom: 5%;
     opacity: 0.3;
 }
 
@@ -231,8 +232,9 @@ br {
     align-items: center;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     font-stretch: 80%;
+    width: 100%;
 }
 
 .container-head-left {
@@ -244,7 +246,7 @@ br {
 }
 
 .container-head-right {
-    width: 350px;
+    width: 360px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -394,6 +396,7 @@ button {
     position: relative;
     margin: 7% 10%;
 }
+
 
 .container-body-description {
     align-items: center;
@@ -613,7 +616,7 @@ button {
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 700px;
+    width: 900px;
 }
 
 .container-body-project-img-ppl {
